--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1,6 +1,6 @@
 # CIDRAM default signature files converted to htaccess format.
 # Source: https://github.com/CIDRAM/Exports/tree/master/htaccess
-# This file last updated: 2023.06.20
+# This file last updated: 2023.06.24
 #
 Order Allow,Deny
 Deny from 0.0.0.0/8
@@ -250,6 +250,7 @@ Deny from 2.56.96.0/21
 Deny from 2.56.108.0/22
 Deny from 2.56.112.0/20
 Deny from 2.56.136.0/22
+Deny from 2.56.152.0/22
 Deny from 2.56.164.0/22
 Deny from 2.56.172.0/22
 Deny from 2.56.176.0/22
@@ -3405,7 +3406,7 @@ Deny from 31.210.24.0/21
 Deny from 31.210.37.0/24
 Deny from 31.210.39.0/24
 Deny from 31.210.42.0/24
-Deny from 31.210.55.0/24
+Deny from 31.210.54.0/23
 Deny from 31.210.64.0/20
 Deny from 31.210.81.0/24
 Deny from 31.210.82.0/24
@@ -4395,40 +4396,78 @@ Deny from 38.238.0.0/15
 Deny from 38.240.176.0/21
 Deny from 38.242.128.0/19
 Deny from 38.242.192.0/18
-Deny from 39.33.202.53/32
-Deny from 39.36.8.121/32
-Deny from 39.36.60.9/32
-Deny from 39.36.172.243/32
-Deny from 39.36.190.232/32
-Deny from 39.36.212.194/32
-Deny from 39.36.223.159/32
-Deny from 39.36.234.92/32
+Deny from 39.36.1.115/32
+Deny from 39.36.57.65/32
+Deny from 39.36.139.220/32
+Deny from 39.37.3.20/32
+Deny from 39.37.25.125/32
+Deny from 39.37.109.246/32
 Deny from 39.37.207.0/24
-Deny from 39.37.227.0/24
-Deny from 39.37.231.39/32
-Deny from 39.37.234.147/32
-Deny from 39.37.237.44/32
+Deny from 39.37.216.39/32
+Deny from 39.37.227.23/32
+Deny from 39.37.227.28/32
+Deny from 39.37.227.30/32
+Deny from 39.37.227.99/32
+Deny from 39.39.109.209/32
+Deny from 39.39.233.9/32
+Deny from 39.40.48.132/32
+Deny from 39.40.204.27/32
+Deny from 39.40.226.245/32
+Deny from 39.40.231.0/24
+Deny from 39.41.176.73/32
+Deny from 39.41.221.220/32
+Deny from 39.42.56.0/24
 Deny from 39.42.132.0/24
+Deny from 39.42.146.0/24
 Deny from 39.42.148.0/24
 Deny from 39.42.152.0/24
-Deny from 39.42.160.7/32
+Deny from 39.42.154.0/24
+Deny from 39.42.158.241/32
+Deny from 39.42.159.0/24
+Deny from 39.42.160.0/24
 Deny from 39.42.165.0/24
 Deny from 39.42.167.0/24
 Deny from 39.42.169.0/24
 Deny from 39.42.172.0/24
 Deny from 39.42.175.0/24
+Deny from 39.42.179.0/24
 Deny from 39.42.180.0/24
-Deny from 39.46.220.64/32
-Deny from 39.46.220.211/32
-Deny from 39.53.201.131/32
-Deny from 39.53.234.85/32
-Deny from 39.53.234.192/32
-Deny from 39.53.240.217/32
-Deny from 39.53.243.151/32
-Deny from 39.59.80.152/32
-Deny from 39.62.161.58/32
-Deny from 39.62.161.121/32
-Deny from 39.62.161.248/32
+Deny from 39.42.184.251/32
+Deny from 39.42.249.0/32
+Deny from 39.46.220.0/24
+Deny from 39.48.186.74/32
+Deny from 39.48.189.81/32
+Deny from 39.51.197.79/32
+Deny from 39.51.203.16/32
+Deny from 39.51.203.104/31
+Deny from 39.51.203.247/32
+Deny from 39.51.225.81/32
+Deny from 39.53.69.138/32
+Deny from 39.53.69.145/32
+Deny from 39.53.69.220/32
+Deny from 39.53.69.254/32
+Deny from 39.53.197.0/24
+Deny from 39.53.201.0/24
+Deny from 39.53.216.2/32
+Deny from 39.53.227.0/24
+Deny from 39.53.231.0/24
+Deny from 39.53.234.8/32
+Deny from 39.53.234.45/32
+Deny from 39.53.234.119/32
+Deny from 39.53.234.176/32
+Deny from 39.53.237.170/32
+Deny from 39.53.239.0/24
+Deny from 39.53.243.0/24
+Deny from 39.53.246.74/32
+Deny from 39.53.250.198/32
+Deny from 39.57.169.174/32
+Deny from 39.59.101.251/32
+Deny from 39.59.135.131/32
+Deny from 39.59.140.38/32
+Deny from 39.59.174.108/32
+Deny from 39.59.204.211/32
+Deny from 39.59.221.63/32
+Deny from 39.61.240.83/32
 Deny from 39.65.20.68/32
 Deny from 39.65.20.158/32
 Deny from 39.65.20.217/32
@@ -9769,7 +9808,10 @@ Deny from 59.98.176.0/20
 Deny from 59.98.192.0/23
 Deny from 59.98.194.0/24
 Deny from 59.99.0.0/16
-Deny from 59.103.236.0/24
+Deny from 59.103.236.8/32
+Deny from 59.103.236.31/32
+Deny from 59.103.236.74/32
+Deny from 59.103.236.85/32
 Deny from 59.110.0.0/16
 Deny from 59.120.97.16/32
 Deny from 59.120.117.73/32
@@ -14263,6 +14305,7 @@ Deny from 84.32.179.0/24
 Deny from 84.32.216.0/23
 Deny from 84.32.225.0/24
 Deny from 84.32.227.0/24
+Deny from 84.32.230.0/24
 Deny from 84.32.236.0/23
 Deny from 84.32.242.0/24
 Deny from 84.32.251.0/24
@@ -17880,7 +17923,7 @@ Deny from 94.103.83.0/24
 Deny from 94.103.84.0/22
 Deny from 94.103.88.0/22
 Deny from 94.103.92.0/23
-Deny from 94.103.127.0/24
+Deny from 94.103.126.0/23
 Deny from 94.103.160.0/20
 Deny from 94.103.179.0/24
 Deny from 94.103.185.0/24
@@ -21234,7 +21277,7 @@ Deny from 103.234.54.0/24
 Deny from 103.234.68.0/24
 Deny from 103.234.71.0/24
 Deny from 103.234.96.0/22
-Deny from 103.234.168.0/22
+Deny from 103.234.170.0/23
 Deny from 103.234.184.0/22
 Deny from 103.234.214.0/24
 Deny from 103.234.220.195/32
@@ -25254,14 +25297,10 @@ Deny from 119.118.62.195/32
 Deny from 119.118.62.243/32
 Deny from 119.147.182.0/25
 Deny from 119.147.182.128/26
-Deny from 119.153.108.33/32
-Deny from 119.153.108.101/32
-Deny from 119.153.108.201/32
-Deny from 119.153.130.0/24
-Deny from 119.153.133.151/32
-Deny from 119.153.137.249/32
-Deny from 119.153.149.34/32
-Deny from 119.153.154.172/32
+Deny from 119.153.105.231/32
+Deny from 119.153.108.97/32
+Deny from 119.153.108.179/32
+Deny from 119.153.156.51/32
 Deny from 119.156.30.0/24
 Deny from 119.160.232.0/22
 Deny from 119.161.100.0/22
@@ -25336,6 +25375,15 @@ Deny from 120.52.39.128/27
 Deny from 120.52.153.192/26
 Deny from 120.53.0.0/16
 Deny from 120.55.0.0/16
+Deny from 120.57.4.0/22
+Deny from 120.57.8.0/21
+Deny from 120.57.16.0/20
+Deny from 120.57.32.0/20
+Deny from 120.57.208.0/20
+Deny from 120.59.177.0/24
+Deny from 120.59.178.0/23
+Deny from 120.59.180.0/22
+Deny from 120.59.184.0/21
 Deny from 120.64.0.0/16
 Deny from 120.67.0.0/16
 Deny from 120.76.0.0/14
@@ -27943,7 +27991,7 @@ Deny from 146.19.39.0/24
 Deny from 146.19.44.0/24
 Deny from 146.19.47.0/24
 Deny from 146.19.51.0/24
-Deny from 146.19.56.0/24
+Deny from 146.19.56.0/23
 Deny from 146.19.61.0/24
 Deny from 146.19.64.0/23
 Deny from 146.19.67.0/24
@@ -32731,6 +32779,9 @@ Deny from 177.154.128.0/19
 Deny from 177.184.224.0/23
 Deny from 177.184.232.0/23
 Deny from 177.184.236.0/22
+Deny from 177.185.117.129/32
+Deny from 177.185.117.134/32
+Deny from 177.185.117.136/32
 Deny from 177.188.110.132/32
 Deny from 177.188.110.162/32
 Deny from 177.192.109.78/32
@@ -34158,74 +34209,81 @@ Deny from 182.160.63.0/24
 Deny from 182.160.128.0/18
 Deny from 182.161.36.0/22
 Deny from 182.161.68.0/22
-Deny from 182.176.167.0/24
-Deny from 182.176.178.249/32
+Deny from 182.176.95.39/32
+Deny from 182.176.95.60/32
+Deny from 182.176.167.49/32
+Deny from 182.176.167.211/32
+Deny from 182.176.178.0/24
 Deny from 182.176.186.0/24
-Deny from 182.177.145.240/32
-Deny from 182.177.167.77/32
-Deny from 182.177.167.79/32
-Deny from 182.177.167.134/32
-Deny from 182.177.167.184/32
-Deny from 182.177.195.67/32
-Deny from 182.177.195.135/32
-Deny from 182.177.195.183/32
-Deny from 182.177.199.58/32
-Deny from 182.177.214.42/32
-Deny from 182.177.214.144/32
-Deny from 182.177.214.175/32
-Deny from 182.177.214.233/32
-Deny from 182.177.229.32/32
-Deny from 182.177.229.177/32
-Deny from 182.177.229.250/32
-Deny from 182.177.233.61/32
-Deny from 182.177.233.110/32
-Deny from 182.177.233.167/32
-Deny from 182.177.240.1/32
-Deny from 182.177.240.29/32
-Deny from 182.177.240.36/32
-Deny from 182.177.240.79/32
-Deny from 182.177.244.29/32
-Deny from 182.177.244.226/32
-Deny from 182.177.246.115/32
-Deny from 182.177.246.165/32
-Deny from 182.179.141.148/32
-Deny from 182.180.8.0/24
-Deny from 182.180.59.0/24
-Deny from 182.180.165.210/31
-Deny from 182.180.171.0/24
+Deny from 182.176.222.99/32
+Deny from 182.177.167.0/24
+Deny from 182.177.195.0/24
+Deny from 182.177.214.0/24
+Deny from 182.177.229.0/24
+Deny from 182.177.233.0/24
+Deny from 182.177.240.0/24
+Deny from 182.177.246.0/24
+Deny from 182.178.130.112/32
+Deny from 182.178.134.219/32
+Deny from 182.178.233.168/32
+Deny from 182.178.249.206/32
+Deny from 182.179.137.119/32
+Deny from 182.179.141.42/32
+Deny from 182.179.141.56/32
+Deny from 182.179.141.109/32
+Deny from 182.179.141.123/32
+Deny from 182.180.59.43/32
+Deny from 182.180.59.137/32
+Deny from 182.180.59.197/32
+Deny from 182.180.65.44/32
+Deny from 182.180.65.205/32
+Deny from 182.180.164.22/32
+Deny from 182.180.164.71/32
+Deny from 182.180.164.211/32
+Deny from 182.180.165.4/32
+Deny from 182.180.165.158/32
+Deny from 182.180.165.209/32
+Deny from 182.180.171.72/32
+Deny from 182.180.171.200/32
+Deny from 182.180.171.253/32
+Deny from 182.182.53.52/32
+Deny from 182.182.91.135/32
+Deny from 182.182.103.173/32
+Deny from 182.184.52.44/32
+Deny from 182.184.52.172/32
+Deny from 182.184.52.186/32
+Deny from 182.184.52.238/32
 Deny from 182.184.73.14/32
-Deny from 182.184.73.18/32
+Deny from 182.184.73.96/32
 Deny from 182.184.73.103/32
-Deny from 182.184.73.120/32
-Deny from 182.185.39.231/32
-Deny from 182.185.127.0/24
+Deny from 182.184.73.169/32
+Deny from 182.184.73.190/32
+Deny from 182.185.127.63/32
+Deny from 182.185.127.76/32
+Deny from 182.185.127.183/32
 Deny from 182.185.144.0/24
-Deny from 182.185.155.41/32
-Deny from 182.185.155.172/32
-Deny from 182.185.155.174/32
-Deny from 182.185.164.31/32
-Deny from 182.185.164.156/32
+Deny from 182.185.155.0/24
 Deny from 182.185.172.0/24
-Deny from 182.185.195.197/32
-Deny from 182.185.208.14/32
-Deny from 182.185.208.122/32
+Deny from 182.185.195.254/32
+Deny from 182.185.208.216/32
+Deny from 182.185.208.232/32
+Deny from 182.185.212.2/32
+Deny from 182.185.212.18/32
 Deny from 182.185.212.26/32
-Deny from 182.185.212.171/32
-Deny from 182.185.212.242/32
-Deny from 182.185.213.131/32
-Deny from 182.185.213.178/32
-Deny from 182.185.223.51/32
-Deny from 182.185.231.167/32
+Deny from 182.185.212.89/32
+Deny from 182.185.213.115/32
 Deny from 182.185.234.0/24
 Deny from 182.185.250.0/24
-Deny from 182.186.11.74/32
-Deny from 182.186.14.79/32
-Deny from 182.186.39.55/32
-Deny from 182.186.73.227/32
-Deny from 182.186.79.10/32
-Deny from 182.186.117.140/32
-Deny from 182.187.101.168/32
-Deny from 182.188.145.158/32
+Deny from 182.186.23.228/32
+Deny from 182.186.58.87/32
+Deny from 182.186.68.147/32
+Deny from 182.186.70.62/32
+Deny from 182.186.90.150/32
+Deny from 182.186.96.165/32
+Deny from 182.186.114.67/32
+Deny from 182.187.63.27/32
+Deny from 182.187.140.188/32
+Deny from 182.188.151.185/32
 Deny from 182.232.17.217/32
 Deny from 182.232.25.26/32
 Deny from 182.232.26.0/24
@@ -36042,6 +36100,7 @@ Deny from 185.168.208.0/22
 Deny from 185.168.248.0/22
 Deny from 185.169.0.0/23
 Deny from 185.169.2.0/24
+Deny from 185.169.4.0/24
 Deny from 185.169.6.0/24
 Deny from 185.169.27.0/24
 Deny from 185.169.80.0/23
@@ -37011,6 +37070,7 @@ Deny from 185.242.80.0/21
 Deny from 185.242.104.0/21
 Deny from 185.242.112.0/22
 Deny from 185.242.156.0/22
+Deny from 185.242.160.0/22
 Deny from 185.242.185.0/24
 Deny from 185.242.204.0/22
 Deny from 185.242.217.0/24
@@ -41600,6 +41660,8 @@ Deny from 195.85.85.0/24
 Deny from 195.85.108.0/24
 Deny from 195.85.194.0/24
 Deny from 195.85.197.0/24
+Deny from 195.85.207.0/24
+Deny from 195.85.216.0/24
 Deny from 195.85.250.0/24
 Deny from 195.88.4.0/23
 Deny from 195.88.24.0/23
@@ -43366,6 +43428,9 @@ Deny from 202.69.240.0/20
 Deny from 202.70.34.92/32
 Deny from 202.70.34.114/32
 Deny from 202.70.34.130/32
+Deny from 202.70.146.45/32
+Deny from 202.70.146.53/32
+Deny from 202.70.146.131/32
 Deny from 202.71.102.165/32
 Deny from 202.72.248.0/22
 Deny from 202.73.4.0/23
@@ -43754,6 +43819,7 @@ Deny from 203.98.88.0/24
 Deny from 203.98.91.0/24
 Deny from 203.98.95.0/24
 Deny from 203.99.131.203/32
+Deny from 203.99.184.0/24
 Deny from 203.105.0.0/18
 Deny from 203.105.78.0/24
 Deny from 203.106.184.0/24
@@ -47153,6 +47219,9 @@ Deny from 218.33.112.0/21
 Deny from 218.33.124.0/22
 Deny from 218.35.207.104/32
 Deny from 218.35.207.219/32
+Deny from 218.38.241.55/32
+Deny from 218.38.241.103/32
+Deny from 218.38.241.105/32
 Deny from 218.40.144.0/20
 Deny from 218.70.22.0/24
 Deny from 218.78.21.0/24
@@ -47384,9 +47453,11 @@ Deny from 221.11.67.250/32
 Deny from 221.11.67.252/32
 Deny from 221.15.124.0/22
 Deny from 221.15.186.0/24
-Deny from 221.120.193.29/32
-Deny from 221.120.193.81/32
-Deny from 221.120.204.206/32
+Deny from 221.120.193.125/32
+Deny from 221.120.193.250/31
+Deny from 221.120.193.252/32
+Deny from 221.120.204.156/32
+Deny from 221.120.204.179/32
 Deny from 221.121.12.238/32
 Deny from 221.121.128.0/19
 Deny from 221.122.91.54/32
@@ -51804,6 +51875,7 @@ Deny from 2803:8200::/32
 Deny from 2803:8700:10::/48
 Deny from 2803:8f80::/32
 Deny from 2803:9800:908f:80a0::/64
+Deny from 2803:9f80::/32
 Deny from 2803:ad80::/48
 Deny from 2803:ad80:16::/48
 Deny from 2803:ad80:69::/48
