--- a/htaccess/.htaccess
+++ b/htaccess/.htaccess
@@ -1,6 +1,6 @@
 # CIDRAM default signature files converted to htaccess format.
 # Source: https://github.com/CIDRAM/Exports/tree/master/htaccess
-# This file last updated: 2023.09.15
+# This file last updated: 2023.09.18
 #
 Order Allow,Deny
 Deny from 0.0.0.0/8
@@ -884,8 +884,6 @@ Deny from 5.149.248.0/21
 Deny from 5.152.176.0/24
 Deny from 5.152.192.0/19
 Deny from 5.153.64.0/19
-Deny from 5.153.175.0/24
-Deny from 5.153.178.0/24
 Deny from 5.153.224.0/21
 Deny from 5.153.233.0/24
 Deny from 5.153.234.0/23
@@ -1237,6 +1235,7 @@ Deny from 5.252.100.0/22
 Deny from 5.252.116.0/23
 Deny from 5.252.118.0/24
 Deny from 5.252.152.0/24
+Deny from 5.252.154.0/24
 Deny from 5.252.160.0/22
 Deny from 5.252.165.0/24
 Deny from 5.252.166.0/23
@@ -2683,6 +2682,7 @@ Deny from 23.155.24.0/24
 Deny from 23.156.240.0/24
 Deny from 23.157.176.0/24
 Deny from 23.157.192.0/24
+Deny from 23.158.224.0/24
 Deny from 23.159.160.0/24
 Deny from 23.159.176.0/24
 Deny from 23.160.128.0/24
@@ -4062,6 +4062,13 @@ Deny from 37.61.226.0/23
 Deny from 37.61.229.0/24
 Deny from 37.61.231.0/24
 Deny from 37.61.232.0/21
+Deny from 37.63.14.116/32
+Deny from 37.63.14.161/32
+Deny from 37.63.14.252/32
+Deny from 37.63.18.52/32
+Deny from 37.63.18.101/32
+Deny from 37.63.18.129/32
+Deny from 37.63.18.135/32
 Deny from 37.72.128.0/24
 Deny from 37.72.135.0/24
 Deny from 37.72.141.0/24
@@ -5166,7 +5173,8 @@ Deny from 41.75.112.0/24
 Deny from 41.75.122.17/32
 Deny from 41.75.122.24/32
 Deny from 41.75.123.61/32
-Deny from 41.76.117.184/32
+Deny from 41.76.117.170/32
+Deny from 41.76.117.182/32
 Deny from 41.77.0.0/21
 Deny from 41.77.142.0/23
 Deny from 41.77.208.0/22
@@ -5892,7 +5900,7 @@ Deny from 45.11.0.0/22
 Deny from 45.11.16.0/21
 Deny from 45.11.32.0/22
 Deny from 45.11.47.0/24
-Deny from 45.11.58.0/23
+Deny from 45.11.58.0/24
 Deny from 45.11.76.0/22
 Deny from 45.11.80.0/22
 Deny from 45.11.92.0/22
@@ -7037,8 +7045,6 @@ Deny from 45.135.163.0/24
 Deny from 45.135.176.0/22
 Deny from 45.135.184.0/24
 Deny from 45.135.186.0/23
-Deny from 45.135.192.0/24
-Deny from 45.135.195.0/24
 Deny from 45.135.200.0/22
 Deny from 45.135.228.0/22
 Deny from 45.135.248.0/24
@@ -7885,9 +7891,8 @@ Deny from 46.8.220.0/22
 Deny from 46.8.239.0/24
 Deny from 46.8.248.0/24
 Deny from 46.8.255.0/24
-Deny from 46.10.64.20/32
-Deny from 46.10.183.56/32
-Deny from 46.10.183.171/32
+Deny from 46.10.38.60/32
+Deny from 46.10.183.226/32
 Deny from 46.16.32.0/24
 Deny from 46.16.35.0/24
 Deny from 46.16.36.0/24
@@ -10631,9 +10636,7 @@ Deny from 62.72.185.0/24
 Deny from 62.72.187.0/24
 Deny from 62.72.191.0/24
 Deny from 62.73.121.49/32
-Deny from 62.73.121.106/32
 Deny from 62.73.121.132/32
-Deny from 62.73.121.244/32
 Deny from 62.73.126.70/32
 Deny from 62.75.128.0/18
 Deny from 62.75.192.0/19
@@ -11613,6 +11616,7 @@ Deny from 66.96.235.195/32
 Deny from 66.96.236.0/22
 Deny from 66.96.254.146/32
 Deny from 66.97.32.0/20
+Deny from 66.97.177.0/24
 Deny from 66.97.179.0/24
 Deny from 66.98.112.0/20
 Deny from 66.110.167.29/32
@@ -13065,6 +13069,7 @@ Deny from 77.83.242.0/24
 Deny from 77.83.245.0/24
 Deny from 77.83.247.0/24
 Deny from 77.83.254.0/23
+Deny from 77.85.102.65/32
 Deny from 77.87.64.0/21
 Deny from 77.87.120.0/24
 Deny from 77.88.0.0/18
@@ -13510,8 +13515,6 @@ Deny from 79.99.24.0/21
 Deny from 79.99.32.0/20
 Deny from 79.99.64.0/21
 Deny from 79.99.128.0/21
-Deny from 79.100.61.5/32
-Deny from 79.100.104.146/32
 Deny from 79.101.45.94/32
 Deny from 79.101.45.110/32
 Deny from 79.101.66.185/32
@@ -14353,7 +14356,6 @@ Deny from 82.131.231.99/32
 Deny from 82.131.231.113/32
 Deny from 82.131.231.116/32
 Deny from 82.131.242.237/32
-Deny from 82.137.113.87/32
 Deny from 82.137.128.0/18
 Deny from 82.137.193.37/32
 Deny from 82.137.217.0/24
@@ -15143,6 +15145,7 @@ Deny from 85.185.238.74/32
 Deny from 85.185.238.90/32
 Deny from 85.185.238.216/32
 Deny from 85.187.56.0/22
+Deny from 85.187.68.20/32
 Deny from 85.187.128.0/19
 Deny from 85.190.0.0/18
 Deny from 85.190.229.0/24
@@ -15549,7 +15552,6 @@ Deny from 87.95.178.120/32
 Deny from 87.96.182.178/32
 Deny from 87.97.10.21/32
 Deny from 87.97.21.78/32
-Deny from 87.97.237.14/32
 Deny from 87.98.128.0/17
 Deny from 87.101.80.0/22
 Deny from 87.103.128.0/17
@@ -15582,7 +15584,7 @@ Deny from 87.120.5.0/24
 Deny from 87.120.8.0/24
 Deny from 87.120.32.0/24
 Deny from 87.120.34.0/23
-Deny from 87.120.36.0/23
+Deny from 87.120.37.0/24
 Deny from 87.120.40.0/23
 Deny from 87.120.64.0/23
 Deny from 87.120.68.0/23
@@ -15728,6 +15730,7 @@ Deny from 87.242.80.0/22
 Deny from 87.242.96.0/22
 Deny from 87.242.104.0/21
 Deny from 87.242.112.0/22
+Deny from 87.243.83.249/32
 Deny from 87.246.7.0/24
 Deny from 87.246.8.0/21
 Deny from 87.246.28.0/22
@@ -16069,7 +16072,6 @@ Deny from 89.23.110.0/24
 Deny from 89.23.124.0/22
 Deny from 89.24.8.116/32
 Deny from 89.25.23.210/32
-Deny from 89.25.102.52/32
 Deny from 89.26.229.0/24
 Deny from 89.28.32.203/32
 Deny from 89.28.52.46/32
@@ -16684,14 +16686,11 @@ Deny from 89.252.146.0/23
 Deny from 89.252.148.0/22
 Deny from 89.252.152.0/24
 Deny from 89.252.154.0/24
-Deny from 89.252.160.0/21
-Deny from 89.252.168.0/23
-Deny from 89.252.171.0/24
-Deny from 89.252.172.0/22
+Deny from 89.252.158.0/24
+Deny from 89.252.160.0/20
 Deny from 89.252.176.0/23
 Deny from 89.252.182.0/23
 Deny from 89.252.184.0/22
-Deny from 89.253.131.19/32
 Deny from 89.253.131.141/32
 Deny from 89.254.192.0/18
 Deny from 89.255.174.0/23
@@ -17397,7 +17396,7 @@ Deny from 91.226.212.0/23
 Deny from 91.226.216.0/22
 Deny from 91.226.221.0/24
 Deny from 91.226.247.0/24
-Deny from 91.227.4.0/24
+Deny from 91.227.4.0/23
 Deny from 91.227.6.0/24
 Deny from 91.227.40.0/23
 Deny from 91.227.44.0/22
@@ -18792,9 +18791,6 @@ Deny from 95.10.251.186/32
 Deny from 95.12.112.0/20
 Deny from 95.32.0.0/16
 Deny from 95.37.0.0/16
-Deny from 95.42.136.181/32
-Deny from 95.43.42.100/32
-Deny from 95.43.125.120/32
 Deny from 95.46.107.0/24
 Deny from 95.47.122.0/23
 Deny from 95.47.144.0/24
@@ -18977,7 +18973,6 @@ Deny from 95.156.225.0/24
 Deny from 95.156.226.0/23
 Deny from 95.156.228.0/22
 Deny from 95.156.232.0/24
-Deny from 95.157.75.0/24
 Deny from 95.157.96.0/24
 Deny from 95.158.39.23/32
 Deny from 95.158.43.0/24
@@ -19043,8 +19038,7 @@ Deny from 95.172.128.0/21
 Deny from 95.172.140.0/22
 Deny from 95.172.157.0/24
 Deny from 95.173.160.0/21
-Deny from 95.173.168.0/23
-Deny from 95.173.170.0/24
+Deny from 95.173.168.0/22
 Deny from 95.173.172.0/24
 Deny from 95.173.177.0/24
 Deny from 95.173.178.0/23
@@ -20918,6 +20912,7 @@ Deny from 103.132.164.0/22
 Deny from 103.133.72.0/23
 Deny from 103.133.74.0/24
 Deny from 103.133.104.0/24
+Deny from 103.133.191.0/24
 Deny from 103.133.200.0/22
 Deny from 103.134.74.0/24
 Deny from 103.134.92.0/22
@@ -29484,11 +29479,13 @@ Deny from 149.18.34.0/24
 Deny from 149.18.38.0/24
 Deny from 149.18.41.0/24
 Deny from 149.18.42.0/24
+Deny from 149.18.44.0/24
 Deny from 149.18.56.0/21
 Deny from 149.18.84.0/24
 Deny from 149.18.92.0/22
 Deny from 149.18.98.0/24
 Deny from 149.18.101.0/24
+Deny from 149.18.106.0/24
 Deny from 149.18.108.0/22
 Deny from 149.19.6.0/23
 Deny from 149.19.196.0/24
@@ -29541,7 +29538,9 @@ Deny from 149.57.16.0/24
 Deny from 149.57.22.0/24
 Deny from 149.57.28.0/23
 Deny from 149.57.36.0/24
+Deny from 149.57.38.0/24
 Deny from 149.57.62.0/24
+Deny from 149.57.116.0/24
 Deny from 149.62.36.0/22
 Deny from 149.62.41.0/24
 Deny from 149.62.43.0/24
@@ -29948,6 +29947,7 @@ Deny from 154.6.5.0/24
 Deny from 154.6.9.0/24
 Deny from 154.6.12.0/23
 Deny from 154.6.14.0/24
+Deny from 154.6.28.0/24
 Deny from 154.6.40.0/21
 Deny from 154.6.52.0/22
 Deny from 154.6.80.0/20
@@ -29964,6 +29964,7 @@ Deny from 154.6.180.0/22
 Deny from 154.6.188.0/24
 Deny from 154.6.196.0/22
 Deny from 154.6.216.0/22
+Deny from 154.6.228.0/24
 Deny from 154.6.238.0/23
 Deny from 154.7.14.0/24
 Deny from 154.7.168.0/21
@@ -31491,8 +31492,7 @@ Deny from 162.250.63.0/24
 Deny from 162.250.96.0/23
 Deny from 162.250.101.0/24
 Deny from 162.250.120.0/21
-Deny from 162.250.144.0/23
-Deny from 162.250.146.0/24
+Deny from 162.250.144.0/22
 Deny from 162.250.200.0/22
 Deny from 162.250.236.0/22
 Deny from 162.251.6.0/24
@@ -31883,9 +31883,7 @@ Deny from 166.0.48.0/21
 Deny from 166.0.57.0/24
 Deny from 166.0.59.0/24
 Deny from 166.0.60.0/22
-Deny from 166.0.64.0/22
-Deny from 166.0.68.0/23
-Deny from 166.0.71.0/24
+Deny from 166.0.64.0/21
 Deny from 166.0.76.0/22
 Deny from 166.0.80.0/20
 Deny from 166.0.96.0/21
@@ -31995,7 +31993,7 @@ Deny from 166.1.211.0/24
 Deny from 166.1.212.0/23
 Deny from 166.1.214.0/24
 Deny from 166.1.219.0/24
-Deny from 166.1.224.0/24
+Deny from 166.1.224.0/23
 Deny from 166.1.240.0/22
 Deny from 166.1.244.0/24
 Deny from 166.1.250.0/23
@@ -32079,7 +32077,7 @@ Deny from 167.160.52.0/23
 Deny from 167.160.54.0/24
 Deny from 167.160.64.0/20
 Deny from 167.160.88.0/22
-Deny from 167.160.92.0/23
+Deny from 167.160.93.0/24
 Deny from 167.160.160.0/19
 Deny from 167.172.0.0/16
 Deny from 167.179.64.0/18
@@ -32934,8 +32932,7 @@ Deny from 172.111.180.0/23
 Deny from 172.111.182.0/24
 Deny from 172.111.184.0/23
 Deny from 172.111.187.0/24
-Deny from 172.111.188.0/23
-Deny from 172.111.190.0/24
+Deny from 172.111.188.0/22
 Deny from 172.111.192.0/24
 Deny from 172.111.195.0/24
 Deny from 172.111.198.0/24
@@ -32951,7 +32948,7 @@ Deny from 172.111.226.7/32
 Deny from 172.111.226.195/32
 Deny from 172.111.232.0/24
 Deny from 172.111.234.0/23
-Deny from 172.111.236.0/24
+Deny from 172.111.236.0/23
 Deny from 172.111.246.0/24
 Deny from 172.111.248.0/23
 Deny from 172.111.252.0/22
@@ -36080,7 +36077,7 @@ Deny from 185.34.32.0/22
 Deny from 185.34.40.0/23
 Deny from 185.34.43.0/24
 Deny from 185.34.68.0/22
-Deny from 185.34.136.0/23
+Deny from 185.34.136.0/24
 Deny from 185.34.152.140/32
 Deny from 185.34.188.0/24
 Deny from 185.34.192.0/22
@@ -38344,7 +38341,6 @@ Deny from 185.233.104.0/22
 Deny from 185.233.124.0/22
 Deny from 185.233.131.0/24
 Deny from 185.233.132.0/22
-Deny from 185.233.186.0/24
 Deny from 185.233.200.0/24
 Deny from 185.233.202.0/23
 Deny from 185.234.4.0/22
@@ -38646,7 +38642,8 @@ Deny from 185.254.104.0/22
 Deny from 185.254.172.0/22
 Deny from 185.254.188.0/23
 Deny from 185.254.190.0/24
-Deny from 185.254.196.0/22
+Deny from 185.254.196.0/23
+Deny from 185.254.198.0/24
 Deny from 185.254.204.0/22
 Deny from 185.254.236.0/22
 Deny from 185.254.241.0/24
@@ -38662,6 +38659,7 @@ Deny from 185.255.100.0/22
 Deny from 185.255.112.0/24
 Deny from 185.255.115.0/24
 Deny from 185.255.120.0/24
+Deny from 185.255.122.0/24
 Deny from 185.255.124.0/24
 Deny from 185.255.126.0/23
 Deny from 185.255.128.0/21
@@ -39060,6 +39058,7 @@ Deny from 188.95.65.0/24
 Deny from 188.95.67.0/24
 Deny from 188.95.69.0/24
 Deny from 188.95.70.0/24
+Deny from 188.95.89.0/24
 Deny from 188.95.112.0/21
 Deny from 188.95.140.0/22
 Deny from 188.95.152.0/21
@@ -39388,87 +39387,35 @@ Deny from 188.235.16.236/32
 Deny from 188.235.32.0/24
 Deny from 188.235.36.0/32
 Deny from 188.235.45.0/24
-Deny from 188.239.72.0/24
-Deny from 188.239.73.52/32
-Deny from 188.239.73.88/32
-Deny from 188.239.74.10/32
-Deny from 188.239.74.221/32
-Deny from 188.239.74.243/32
-Deny from 188.239.75.13/32
-Deny from 188.239.75.93/32
-Deny from 188.239.75.185/32
-Deny from 188.239.75.195/32
-Deny from 188.239.75.209/32
-Deny from 188.239.75.246/32
-Deny from 188.239.76.29/32
-Deny from 188.239.76.88/32
-Deny from 188.239.76.199/32
-Deny from 188.239.78.28/32
-Deny from 188.239.78.74/32
-Deny from 188.239.78.76/32
-Deny from 188.239.80.134/32
-Deny from 188.239.80.164/32
-Deny from 188.239.80.194/32
-Deny from 188.239.81.85/32
-Deny from 188.239.81.252/32
-Deny from 188.239.82.0/24
-Deny from 188.239.83.34/32
-Deny from 188.239.83.80/32
-Deny from 188.239.83.231/32
-Deny from 188.239.83.239/32
-Deny from 188.239.84.7/32
-Deny from 188.239.84.51/32
-Deny from 188.239.84.212/32
-Deny from 188.239.85.4/32
-Deny from 188.239.85.106/32
-Deny from 188.239.85.115/32
-Deny from 188.239.85.213/32
-Deny from 188.239.86.1/32
-Deny from 188.239.86.91/32
-Deny from 188.239.86.101/32
-Deny from 188.239.86.230/32
-Deny from 188.239.87.0/24
-Deny from 188.239.88.142/32
-Deny from 188.239.88.155/32
-Deny from 188.239.88.249/32
-Deny from 188.239.89.116/32
-Deny from 188.239.90.6/32
-Deny from 188.239.90.238/32
-Deny from 188.239.91.139/32
-Deny from 188.239.91.229/32
-Deny from 188.239.92.108/32
-Deny from 188.239.92.166/32
-Deny from 188.239.93.65/32
-Deny from 188.239.94.3/32
-Deny from 188.239.94.152/32
-Deny from 188.239.94.169/32
-Deny from 188.239.95.0/24
-Deny from 188.239.97.11/32
-Deny from 188.239.97.61/32
-Deny from 188.239.97.171/32
-Deny from 188.239.98.123/32
-Deny from 188.239.99.98/32
-Deny from 188.239.99.186/32
-Deny from 188.239.100.111/32
-Deny from 188.239.100.185/32
+Deny from 188.239.72.75/32
+Deny from 188.239.73.213/32
+Deny from 188.239.73.254/32
+Deny from 188.239.76.47/32
+Deny from 188.239.78.239/32
+Deny from 188.239.80.125/32
+Deny from 188.239.80.151/32
+Deny from 188.239.81.127/32
+Deny from 188.239.82.52/32
+Deny from 188.239.83.107/32
+Deny from 188.239.85.87/32
+Deny from 188.239.85.110/32
+Deny from 188.239.85.225/32
+Deny from 188.239.98.201/32
+Deny from 188.239.99.37/32
 Deny from 188.239.100.230/32
 Deny from 188.239.102.20/32
-Deny from 188.239.102.38/32
-Deny from 188.239.103.187/32
-Deny from 188.239.104.209/32
-Deny from 188.239.118.237/32
-Deny from 188.239.119.138/32
-Deny from 188.239.119.158/32
-Deny from 188.239.120.41/32
-Deny from 188.239.120.128/32
-Deny from 188.239.120.199/32
-Deny from 188.239.120.209/32
-Deny from 188.239.120.224/32
-Deny from 188.239.121.75/32
-Deny from 188.239.122.229/32
+Deny from 188.239.102.145/32
+Deny from 188.239.103.68/32
+Deny from 188.239.104.123/32
+Deny from 188.239.118.22/32
+Deny from 188.239.118.136/32
+Deny from 188.239.119.148/32
+Deny from 188.239.120.2/32
+Deny from 188.239.121.63/32
+Deny from 188.239.122.159/32
 Deny from 188.239.123.31/32
-Deny from 188.239.123.119/32
-Deny from 188.239.123.188/32
+Deny from 188.239.123.93/32
+Deny from 188.239.123.95/32
 Deny from 188.239.191.0/24
 Deny from 188.240.13.0/24
 Deny from 188.240.18.0/23
@@ -40364,9 +40311,7 @@ Deny from 192.71.151.0/24
 Deny from 192.71.153.0/24
 Deny from 192.71.156.0/24
 Deny from 192.71.165.0/24
-Deny from 192.71.166.25/32
-Deny from 192.71.166.135/32
-Deny from 192.71.166.137/32
+Deny from 192.71.166.0/24
 Deny from 192.71.169.0/24
 Deny from 192.71.177.0/24
 Deny from 192.71.202.0/24
@@ -40530,6 +40475,7 @@ Deny from 192.142.16.0/22
 Deny from 192.142.20.0/23
 Deny from 192.142.72.0/22
 Deny from 192.142.76.0/23
+Deny from 192.142.84.0/24
 Deny from 192.142.100.0/23
 Deny from 192.142.104.0/24
 Deny from 192.142.106.0/23
@@ -40541,6 +40487,7 @@ Deny from 192.142.136.0/23
 Deny from 192.142.142.0/23
 Deny from 192.142.174.0/23
 Deny from 192.142.180.0/22
+Deny from 192.142.196.0/23
 Deny from 192.142.226.0/23
 Deny from 192.142.228.0/23
 Deny from 192.142.240.0/21
@@ -42633,6 +42580,7 @@ Deny from 194.110.138.0/23
 Deny from 194.110.150.0/24
 Deny from 194.110.168.0/24
 Deny from 194.110.170.0/23
+Deny from 194.110.173.0/24
 Deny from 194.110.193.0/24
 Deny from 194.110.203.0/24
 Deny from 194.110.246.0/23
@@ -43498,7 +43446,6 @@ Deny from 196.44.176.31/32
 Deny from 196.44.176.39/32
 Deny from 196.44.176.55/32
 Deny from 196.48.0.0/16
-Deny from 196.52.1.0/24
 Deny from 196.52.2.0/24
 Deny from 196.52.70.0/24
 Deny from 196.53.113.0/24
@@ -46044,8 +45991,7 @@ Deny from 206.162.252.0/23
 Deny from 206.166.248.0/23
 Deny from 206.166.251.0/24
 Deny from 206.167.33.0/24
-Deny from 206.168.148.0/23
-Deny from 206.168.151.0/24
+Deny from 206.168.148.0/22
 Deny from 206.168.212.0/23
 Deny from 206.168.240.0/24
 Deny from 206.170.48.0/21
@@ -46464,6 +46410,7 @@ Deny from 208.78.96.0/20
 Deny from 208.78.216.0/21
 Deny from 208.79.45.0/24
 Deny from 208.79.47.0/24
+Deny from 208.79.191.0/24
 Deny from 208.79.232.0/21
 Deny from 208.80.128.0/24
 Deny from 208.80.202.0/23
@@ -47133,7 +47080,6 @@ Deny from 212.3.157.0/24
 Deny from 212.3.159.0/24
 Deny from 212.4.240.0/22
 Deny from 212.5.158.0/24
-Deny from 212.5.159.2/32
 Deny from 212.6.36.0/24
 Deny from 212.6.51.0/24
 Deny from 212.6.128.0/17
@@ -47905,6 +47851,7 @@ Deny from 213.219.208.0/21
 Deny from 213.219.216.0/22
 Deny from 213.219.224.0/19
 Deny from 213.221.64.0/18
+Deny from 213.222.62.225/32
 Deny from 213.225.236.0/23
 Deny from 213.226.68.0/22
 Deny from 213.226.76.0/22
@@ -48151,7 +48098,8 @@ Deny from 216.99.220.0/24
 Deny from 216.104.16.0/24
 Deny from 216.104.32.0/20
 Deny from 216.105.164.0/22
-Deny from 216.105.168.0/22
+Deny from 216.105.168.0/24
+Deny from 216.105.170.0/23
 Deny from 216.107.128.0/19
 Deny from 216.109.161.0/24
 Deny from 216.109.162.0/24
@@ -48227,8 +48175,7 @@ Deny from 216.139.208.0/20
 Deny from 216.139.224.0/19
 Deny from 216.144.224.0/19
 Deny from 216.145.0.0/19
-Deny from 216.146.24.0/24
-Deny from 216.146.26.0/23
+Deny from 216.146.24.0/22
 Deny from 216.146.28.0/24
 Deny from 216.146.32.0/23
 Deny from 216.146.35.0/24
@@ -51926,6 +51873,7 @@ Deny from 2602:fac2:4::/48
 Deny from 2602:fad3::/40
 Deny from 2602:fada::/44
 Deny from 2602:fafd:902::/48
+Deny from 2602:fafd:f0e::/48
 Deny from 2602:fafd:f30::/48
 Deny from 2602:fafd:fb2::/48
 Deny from 2602:fafd:fe0::/48
@@ -54067,6 +54015,7 @@ Deny from 2a00:d8a0::/29
 Deny from 2a00:da00::/32
 Deny from 2a00:dac0::/32
 Deny from 2a00:dcc0::/32
+Deny from 2a00:dcc7:d000::/38
 Deny from 2a00:dd80:fb81::/48
 Deny from 2a00:de61:100::/40
 Deny from 2a00:de61:200::/39
@@ -54538,12 +54487,13 @@ Deny from 2a03:f85:2::/48
 Deny from 2a03:1240::/48
 Deny from 2a03:1840::/46
 Deny from 2a03:1e03::/48
-Deny from 2a03:2100::/43
-Deny from 2a03:2100:20::/44
+Deny from 2a03:2100::/44
+Deny from 2a03:2100:10::/48
 Deny from 2a03:2100:32::/47
 Deny from 2a03:2100:34::/46
 Deny from 2a03:2100:38::/45
 Deny from 2a03:2100:40::/48
+Deny from 2a03:2102:1::/48
 Deny from 2a03:21c0::/32
 Deny from 2a03:2420::/32
 Deny from 2a03:2800::/29
